# edgegap-arbctl

./: Cargo.toml  README.md  gen-edgegap-client-sync.sh
edgegap/: Cargo.toml  README.md
edgegap/.openapi-generator/: FILES
edgegap/src/apis/: applications_api.rs  configuration.rs  container_registry_api.rs  context_api.rs  deployment_tags_api.rs  deployments_api.rs  endpoint_storage_api.rs  fleets_api.rs  ip_lookup_api.rs  lobbies_api.rs  locations_api.rs  matchmaker_api.rs  metrics_api.rs  monitoring_api.rs  relays_api.rs  sessions_api.rs  telemetry_api.rs
src/: cli.rs  context.rs  main.rs  patch.rs  payload_reader.rs  renderer.rs
src/cli/: cmds.rs
src/cli/cmds/: application.rs  deployment.rs
src/cli/cmds/application/: create.rs  create_version.rs  get.rs  list.rs  patch_version.rs  version.rs  versions.rs
src/cli/cmds/deployment/: list.rs
