[package]
name = "arbctl"
authors = ["RJ <rj@metabrew.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
# use our local non-async generated edgegap client
edgegap = {path = "./edgegap"}
enum_delegate = "0.2.0"
clap = { version = "4.4", features = ["derive"] }
serde     = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0"
