[package]
name = "arbctl"
authors = ["RJ <rj@metabrew.com>"]
version = "0.0.2"
edition = "2021"
description = "CLI tool for the Edgegap API, designed for use in automated deployment pipelines"
license = "MIT OR Apache-2.0"
repository = "https://github.com/RJ/edgegap-arbctl"
keywords = ["cli", "clap", "rust", "edgegap", "gamedev"]
readme = "README.md"

[dependencies]
# use our local non-async generated edgegap client
edgegap = {path = "./edgegap", version = "0.1.0"}
enum_delegate = "0.2.0"
clap = { version = "4.4", features = ["derive"] }
serde     = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0"
